[package]
name = "lsassdmprs"
version = "0.1.0"
edition = "2021"
description = "Rust code to dump lsass.exe process"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.28.4"

[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_Storage_FileSystem",
    "Win32_System_Kernel",
    "Win32_System_Memory"
]
